[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
argon2 = { version = "0.5", features = ["std"] }
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"